--- a/Medieinstitutet/HTML/Grid_practice/styles/main.css
+++ b/Medieinstitutet/HTML/Grid_practice/styles/main.css
@@ -1,10 +1,28 @@
+:root {
+    --main-button-color: white;
+    --main-background-color: black;
+    --another-variable: green;
+    --xx-x-xxx-x-xx-xx-xx: blue;
+
+    --main-font-size: 16px;
+
+    --body-text: Helvetica var(--main-font-size);
+}
+
+/* illustration of above */
+
+.test {
+    font: var(--body-text);
+}
+
+
 html {
     scroll-behavior: smooth;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
     margin: 0;
-    background-color: rgb(212, 212, 212)
+    
 }
 
 
@@ -22,7 +40,7 @@ ul {
 
 li {
     font-size: 115%;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
 }
 
 
@@ -38,23 +56,38 @@ a:hover {
 
 .container {
     background-color: rgb(230, 230, 230);
-    max-width: 1201px;
+    max-width: 1082px;
     margin: auto;
     display: grid;
     grid-template-columns: 200px 5fr 200px;
-    grid-template-rows: 120px 100px 3fr 200px;
+    grid-template-rows: 150px 100px 3fr 200px;
+    /*OPACITY against background*/
+    opacity: 90%;
 }
 
+img {
+    opacity: 100%;
+}
 
 .head {
-    color: rgb(247, 247, 247);
+    display: flex;
+    color: rgb(236, 236, 236);
+    background-image: url("stonks02.jpg");
     background-color: rgb(70, 70, 70);
-    padding: 1em 1em;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
+    
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+        padding-left: 3em;
+        padding-right: 3em;
+
+    text-shadow: 1px 2px 1px rgb(54, 54, 54);
+    text-align: left;
 }
+
 
 .navigation {
     /* does not work */
@@ -92,16 +125,34 @@ a:hover {
         font-size: 100%;
         padding-bottom: 0px;
     }
+}
 
+/*Right menu - Author information */
 
+.rightmenu {
+    text-align: center;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    padding: 15px;
+}
 
+.rightmenu > h3 {
+    font-size: 14px;
+}
+.rightmenu > p {
+    font-size: 12px;
+    text-align: justify;
 }
 
 
 
-
-
-
+@media screen and (max-width: 640px) {
+    .rightmenu {
+        display: none;
+    }
+}
 
 /* ARTICLES */
 
@@ -115,12 +166,11 @@ a:hover {
     background-color: rgb(247, 247, 247);
     text-align: justify;
     display: grid;
-    padding: 20px;
+    padding-left: 20px;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 4;
-    border-bottom: 1px solid black;
 }
 
 
