--- a/Medieinstitutet/HTML/project02/styles/main.css
+++ b/Medieinstitutet/HTML/project02/styles/main.css
@@ -1,80 +1,156 @@
+@media screen and (min-width: 1024px) {
+    .body {
+        /* centrerar och begränsar bredd*/
+        max-width: 1024px;
+        margin: 0 auto;
+    }
+}
+
+
+
+
+
 body {
-    background-color: aliceblue;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* This is the banner and navigation section */
 .banner {
-    /*space between? not sure */
     justify-content: space-between;
     display: flex;
-    background-color: dodgerblue;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
 }
 
 .banner > div {
-    max-height: 100px;
     background-color: #f1f1f1;
-    width: 500px;
+    width: 100%;
     margin: 10px;
     text-align: center;
+    line-height: 75px;
+    font-size: 16px;
+}
+
+.banner > #logotype {
+    width: 100%;
+}
+
+#nav {
     line-height: 100px;
-    font-size: 25px;
-    ;
+    display: flex;
+    justify-content: space-around;
+    
 }
 
-
+#nav>a {
+    text-decoration: none;
+    font-size: 125%;
+}
 /*does not work, overwritten? */
-.logotype {
-    max-width: 150px;
+#logotype {
+    line-height: 100px;
+    background-color: purple;
+    color: rgb(238, 238, 238);
 
 }
 
+img {
+    background-image: url("hasbulla.png");
+    object-fit: contain;
+}
 
+#nav > a:hover {
+    color: rgb(255, 255, 255);
+}
 
 
 
 /* This is the main section */
-.main {
-    justify-content: left;
-    display: flex;
-    background-color: rgb(13, 48, 241);
-}
-
-.main > div {
-    flex-direction: row;
-    background-color: #f1f1f1;
-    width: 600px;
-    height: 80vh;
+.wrapper {
     margin: 10px;
-    text-align: center;
-    line-height: 100px;
-    font-size: 15px;
-    ;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    row-gap: 20px;
+    font-size: 1em;
 }
 
-.sidebar {
-    max-width: 250px;
+.box {
+    background-color: purple;
+    padding: 20px;
+    color: #f1f1f1;
 }
 
-.horizontal {
-    max-width: 100px;
+.slave {
+    margin: 10px;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr;
+    border: 1px solid rgb(238, 238, 238);
+    padding: 15px;
 }
+
+
+
 
 
 
 
 /* This is the footer */
 .footbar {
+    margin: 10px;
     display: flex;
-    flex-wrap: nowrap;
+    justify-content: space-between;
     background-color: rgb(7, 33, 59);
 }
 
 .footbar > div {
     background-color: #f1f1f1;
-    width: 50%;
+    width: 100%;
     margin: 10px;
     text-align: center;
     line-height: 100px;
-    font-size: 35px;
+    font-size: 16px;
     ;
+}
+
+@media screen and (max-width: 800px) {
+    .banner {
+        flex-wrap: wrap;
+    }
+
+    #nav {
+        line-height: 35px;
+    }
+
+    #logotype {
+        width: 100%;
+    }
+    .login {
+        opacity: 0;
+        max-height: 5px;
+    }
+
+    .wrapper {
+        grid-template-columns: 100%;
+        column-gap: 0px;
+        flex-wrap: wrap;
+    }
+
+    .footbar {
+        line-height: 0px;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .wrapper {
+        column-gap: 20px;
+    }
+
+    .box {
+        border-radius: 5px;
+    }
 }
